# playful_kinematics

./: CMakeLists.txt  README.md  package.xml  setup.py
doc/cpp/html/: dir_d44c64559bbebec7f509842c48db8b23.html  dir_ef497a26a65e927c0aeffb645dc55e68.html  files.html  fk_8h.html  fk_8h__dep__incl.map  fk_8h__dep__incl.md5  fk_8h__incl.map  fk_8h__incl.md5  fk_8h_source.html  graph_legend.html  ik_8h.html  ik_8h__incl.map  ik_8h__incl.md5  ik_8h_source.html  index.html  kinematic__config_8h.html  kinematic__config_8h__dep__incl.map  kinematic__config_8h__dep__incl.md5  kinematic__config_8h__incl.map  kinematic__config_8h__incl.md5  kinematic__config_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespaceplayful__kinematics.html  namespaces.html  score__functions_8h.html  score__functions_8h__dep__incl.map  score__functions_8h__dep__incl.md5  score__functions_8h__incl.map  score__functions_8h__incl.md5  score__functions_8h_source.html  soma_8h.html  soma_8h__dep__incl.map  soma_8h__dep__incl.md5  soma_8h__incl.map  soma_8h__incl.md5  soma_8h_source.html
doc/python/html/: annotated.html  classes.html  classplayful__kinematics_1_1scripts_1_1playful__kinematics_1_1playful__kinematics_1_1IK-members.html  classplayful__kinematics_1_1scripts_1_1playful__kinematics_1_1playful__kinematics_1_1IK.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_57efd92a4100b9378b1a0e1120dab405.html  functions.html  functions_func.html  graph_legend.html  index.html
doxyfiles/cpp/: Doxyfile
doxyfiles/python/: Doxyfile
examples/pepper/: example.py
include/playful_kinematics/: fk.h  ik.h  kinematic_config.h  score_functions.h  soma.h
scripts/playful_kinematics/: playful_kinematics.py  playful_kinematics_configuration.py  playful_kinematics_cpp.py  set_ik_for_pepper.py
src/: fk.cpp  fk_example.cpp  ik.cpp  kinematic_config.cpp  score_functions.cpp  soma.cpp
tests/: main.cpp  soma_unit_tests.cpp
urdf/pepper/: readme.txt
(+21 files in other folders)
